# fix-headers-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
src/fix_headers/: __init__.py  __main__.py  cli.py  core.py  utils.py
